// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoInfoBox renders collapsed 1`] = `
<div
  className="video-info-box"
>
  <Image
    as="img"
    circular={true}
    className="channel-image"
    src="http://via.placeholder.com/48x48"
    ui={true}
  />
  <div
    className="video-info"
  >
    <div
      className="channel-name"
    >
      Parent Name
    </div>
    <div
      className="video-publication-date"
    >
      Thu 24, 2017
    </div>
  </div>
  <Button
    as="button"
    color="youtube"
  >
    Als Favorite markieren
  </Button>
  <div
    className="video-description"
  >
    <div
      className="collapsed"
    >
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
    </div>
    <Button
      as="button"
      compact={true}
      onClick={[Function]}
    >
      Mehr Ansehen
    </Button>
  </div>
</div>
`;

exports[`VideoInfoBox renders expanded 1`] = `
<div
  className="video-info-box"
>
  <Image
    as="img"
    circular={true}
    className="channel-image"
    src="http://via.placeholder.com/48x48"
    ui={true}
  />
  <div
    className="video-info"
  >
    <div
      className="channel-name"
    >
      Parent Name
    </div>
    <div
      className="video-publication-date"
    >
      Thu 24, 2017
    </div>
  </div>
  <Button
    as="button"
    color="youtube"
  >
    Als Favorite markieren
  </Button>
  <div
    className="video-description"
  >
    <div
      className="expanded"
    >
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
      <p>
        Paragraph
      </p>
    </div>
    <Button
      as="button"
      compact={true}
      onClick={[Function]}
    >
      Weniger Anzeigen
    </Button>
  </div>
</div>
`;
